fix: spacing

--- a/src/components/pages/solution-page/solution-page.scss
+++ b/src/components/pages/solution-page/solution-page.scss
@@ -118,11 +118,11 @@
 
 #continue {
   margin-block-start: 96px;
-  margin-block-end: 96px;
 }
 
 
 #newsletter {
+  margin-block-start: 160px;
   margin-block-end: 160px;
 }
 
